[gd_scene load_steps=40 format=3 uid="uid://c0snx5bnkembq"]

[ext_resource type="Script" path="res://Scenes/Towers/Mortar.gd" id="1_prd8l"]
[ext_resource type="Texture2D" uid="uid://cy7teqocldekj" path="res://Assets/Animations/spritesheet (3).png" id="2_24fqq"]
[ext_resource type="Texture2D" uid="uid://bka2tp3y3ketq" path="res://Assets/Animations/spritesheet (4).png" id="3_g3dpo"]
[ext_resource type="Script" path="res://addons/2d_shapes/shapes/Ellipse.gd" id="4_jquv4"]
[ext_resource type="AudioStream" uid="uid://daup0ivmwxv1k" path="res://Assets/Sound/Towers/Mortar.mp3" id="5_5udeq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_crsom"]
atlas = ExtResource("2_24fqq")
region = Rect2(0, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq4m2"]
atlas = ExtResource("2_24fqq")
region = Rect2(328, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2nnx"]
atlas = ExtResource("2_24fqq")
region = Rect2(656, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_bew2u"]
atlas = ExtResource("2_24fqq")
region = Rect2(984, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_17r6i"]
atlas = ExtResource("2_24fqq")
region = Rect2(1148, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dol1"]
atlas = ExtResource("2_24fqq")
region = Rect2(1476, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_knh1a"]
atlas = ExtResource("2_24fqq")
region = Rect2(1640, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5ku3"]
atlas = ExtResource("2_24fqq")
region = Rect2(1804, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1e6j"]
atlas = ExtResource("2_24fqq")
region = Rect2(1968, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsrdn"]
atlas = ExtResource("2_24fqq")
region = Rect2(2132, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvwes"]
atlas = ExtResource("2_24fqq")
region = Rect2(2296, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_148n2"]
atlas = ExtResource("2_24fqq")
region = Rect2(2460, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_h62by"]
atlas = ExtResource("2_24fqq")
region = Rect2(0, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5kxx"]
atlas = ExtResource("3_g3dpo")
region = Rect2(0, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfiav"]
atlas = ExtResource("3_g3dpo")
region = Rect2(164, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhhhm"]
atlas = ExtResource("3_g3dpo")
region = Rect2(328, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_42o27"]
atlas = ExtResource("3_g3dpo")
region = Rect2(492, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yxsh"]
atlas = ExtResource("3_g3dpo")
region = Rect2(656, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6n0o"]
atlas = ExtResource("3_g3dpo")
region = Rect2(820, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd76r"]
atlas = ExtResource("3_g3dpo")
region = Rect2(984, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hlkh"]
atlas = ExtResource("3_g3dpo")
region = Rect2(1148, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_pj702"]
atlas = ExtResource("3_g3dpo")
region = Rect2(1312, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejl36"]
atlas = ExtResource("3_g3dpo")
region = Rect2(1476, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_gswuq"]
atlas = ExtResource("3_g3dpo")
region = Rect2(1640, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_v561k"]
atlas = ExtResource("3_g3dpo")
region = Rect2(1804, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2n6e"]
atlas = ExtResource("3_g3dpo")
region = Rect2(1968, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdrxk"]
atlas = ExtResource("3_g3dpo")
region = Rect2(2132, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_3h83f"]
atlas = ExtResource("3_g3dpo")
region = Rect2(2296, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_am8r4"]
atlas = ExtResource("3_g3dpo")
region = Rect2(2460, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nj16"]
atlas = ExtResource("3_g3dpo")
region = Rect2(2624, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn2am"]
atlas = ExtResource("3_g3dpo")
region = Rect2(2788, 0, 164, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_ws2kq"]
atlas = ExtResource("3_g3dpo")
region = Rect2(2952, 0, 164, 177)

[sub_resource type="SpriteFrames" id="SpriteFrames_kw08k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_crsom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rq4m2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2nnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bew2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17r6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dol1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knh1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5ku3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1e6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsrdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvwes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_148n2")
}],
"loop": false,
"name": &"attack",
"speed": 40.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h62by")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5kxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfiav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhhhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42o27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yxsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6n0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd76r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hlkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pj702")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejl36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gswuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v561k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2n6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdrxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3h83f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_am8r4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nj16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jn2am")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ws2kq")
}],
"loop": false,
"name": &"reset",
"speed": 40.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ul8jb"]
radius = 100.0

[node name="Mortar" type="StaticBody2D"]
script = ExtResource("1_prd8l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3, -26)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_kw08k")
animation = &"idle"

[node name="range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="range"]
shape = SubResource("CircleShape2D_ul8jb")
one_way_collision_margin = 0.0

[node name="Ellipse" type="Node2D" parent="range"]
visible = false
script = ExtResource("4_jquv4")
size = Vector2(200, 200)
circle = true
fill_color = Color(0.839216, 0.376471, 0.196078, 0.419608)

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -80.0
offset_top = -67.0
offset_right = 72.0
offset_bottom = 67.0
metadata/_edit_use_anchors_ = true

[node name="targeting" type="Node2D" parent="."]
visible = false
script = ExtResource("4_jquv4")
size = Vector2(200, 200)
circle = true
fill_color = Color(0.172549, 1, 0.243137, 0.266667)

[node name="Fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_5udeq")
volume_db = -12.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="range" to="." method="_on_range_body_exited"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
